--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "rxjs": "~7.8.0",
     "topojson-client": "^3.1.0",
     "tslib": "^2.3.0",
+    "us": "^2.0.0",
     "us-atlas": "^3.0.1",
     "zone.js": "~0.14.3"
   },
@@ -31,6 +32,7 @@
     "@angular/compiler-cli": "^18.0.0",
     "@types/d3-geo": "^3.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^22.15.21",
     "@types/topojson-client": "^3.1.5",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
