--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "experimentalDecorators": true,
     "moduleResolution": "bundler",
     "importHelpers": true,
+    "typeRoots": ["./node_modules/@types"],
+    "types": [],
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
@@ -27,6 +29,6 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
-  }
+    "strictTemplates": true,
+  },
 }
