--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "bundler",
     "importHelpers": true,
-    "typeRoots": ["./node_modules/@types"],
-    "types": [],
+    "types": ["node"],
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
