--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "d3-geo": "^3.1.1",
+    "puppeteer": "^24.11.1",
     "rxjs": "~7.8.0",
     "topojson-client": "^3.1.0",
     "tslib": "^2.3.0",
