replacing d3geo with more up to date d3

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "^20.1.2",
     "@angular/router": "^20.1.2",
     "@jsverse/transloco": "^7.6.1",
-    "d3-geo": "^3.1.1",
+    "d3": "^7.9.0",
     "rxjs": "~7.8.0",
     "topojson-client": "^3.1.0",
     "tslib": "^2.3.0",
@@ -32,6 +32,7 @@
     "@angular/build": "^20.1.1",
     "@angular/cli": "^20.1.1",
     "@angular/compiler-cli": "^20.1.2",
+    "@types/d3": "^7.4.3",
     "@types/d3-geo": "^3.1.0",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^22.15.21",
