working dockerfile build / docker-compose build

--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "PlantMapper": {
+    "seed-mapper": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
-            "outputPath": "dist/plant-mapper",
+            "outputPath": "dist/seed-mapper",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -38,8 +38,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "5MB",
+                  "maximumError": "10MB"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -61,10 +61,10 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "PlantMapper:build:production"
+              "buildTarget": "seed-mapper:build:production"
             },
             "development": {
-              "buildTarget": "PlantMapper:build:development"
+              "buildTarget": "seed-mapper:build:development"
             }
           },
           "options": {
