--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -56,5 +56,9 @@
     "jiti": "^2.6.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.46.3"
-  }
+  },
+  "files": [
+    "us-atlas/counties-10m.json",
+    "us-atlas/counties-albers-10m.json"
+  ]
 }
