--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -36,7 +36,10 @@
             "outputMode": "server",
             "ssr": {
               "entry": "src/server.ts"
-            }
+            },
+            "allowedCommonJsDependencies": [
+              "us-atlas"
+            ]
           },
           "configurations": {
             "production": {
