--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -5,14 +5,13 @@
     "ng": "ng",
     "start": "ng serve",
     "start-ssl": "ng serve --ssl",
-    "start:dev": "npm run start && npm run build && npm run serve:ssr:PlantMapper",
     "lint": "npx eslint --fix",
-    "watch:ssr": "ng build --watch --configuration development && npm run serve:ssr:PlantMapper",
+    "watch:ssr": "ng build --watch --configuration development && npm run serve:ssr:seed-mapper",
     "build": "ng build",
-    "build:ssr": "ng build && ng run PlantMapper:server:development",
+    "build:ssr": "ng build && npm run serve:ssr:seed-mapper",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:PlantMapper": "node dist/seed-mapper/server/server.mjs"
+    "serve:ssr:seed-mapper": "node dist/seed-mapper/server/server.mjs"
   },
   "private": true,
   "dependencies": {
