--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -28,13 +28,13 @@
     "@angular/router": "^20.1.2",
     "@angular/ssr": "^20.3.12",
     "@jsverse/transloco": "^8.1.0",
+    "compression": "^1.8.1",
     "d3": "^7.9.0",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "topojson-client": "^3.1.0",
     "tslib": "^2.3.0",
-    "us-atlas": "^3.0.1",
-    "zone.js": "~0.15.1"
+    "us-atlas": "^3.0.1"
   },
   "devDependencies": {
     "@angular-eslint/eslint-plugin": "^20.5.1",
@@ -47,6 +47,7 @@
     "@eslint/js": "^9.39.1",
     "@eslint/json": "^0.14.0",
     "@eslint/markdown": "^7.5.1",
+    "@types/compression": "^1.8.1",
     "@types/d3": "^7.4.3",
     "@types/d3-geo": "^3.1.0",
     "@types/express": "^5.0.1",
