--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -15,6 +15,8 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
+	  <PackageReference Include="NetTopologySuite" Version="2.6.0" />
+	  <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="4.0.0" />
 	</ItemGroup>
 
 </Project>
