--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -14,9 +14,7 @@
 		</Content>
 	</ItemGroup>
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
-	  <PackageReference Include="NetTopologySuite" Version="2.6.0" />
-	  <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="4.0.0" />
+	  <Folder Include="Assets\" />
 	</ItemGroup>
 
 </Project>
