swapped most of the files to the ssr api so that they can share functions and deliver faster. slimmed things down to be faster :)

--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -23,12 +23,7 @@
                 "glob": "**/*",
                 "input": "public"
               },
-              "src/assets",
-              {
-                "glob": "*.json",
-                "input": "node_modules/us-atlas",
-                "output": "assets/us-atlas"
-              }
+              "src/assets"
             ],
             "styles": [
               "src/custom-theme.scss",
