--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -19,6 +19,7 @@
     "@angular/common": "^20.1.2",
     "@angular/compiler": "^20.1.2",
     "@angular/core": "^20.1.2",
+    "@angular/forms": "^20.1.2",
     "@angular/material": "^20.1.2",
     "@angular/platform-browser": "^20.1.2",
     "@angular/platform-browser-dynamic": "^20.1.2",
@@ -30,8 +31,7 @@
     "d3": "^7.9.0",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
-    "topojson-client": "^3.1.0",
-    "us-atlas": "^3.0.1"
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@angular-eslint/eslint-plugin": "^20.5.1",
