--- a/FrontEnd/tsconfig.json
+++ b/FrontEnd/tsconfig.json
@@ -17,11 +17,7 @@
     "types": ["node"],
     "target": "ES2022",
     "module": "ES2022",
-    "useDefineForClassFields": false,
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
