--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -28,7 +28,7 @@
     "compression": "^1.8.1",
     "d3": "^7.9.0",
     "express": "^5.1.0",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.0",
     "topojson-client": "^3.1.0"
   },
   "devDependencies": {
