--- a/FrontEnd/Dockerfile
+++ b/FrontEnd/Dockerfile
@@ -1,21 +1,33 @@
-# Build Angular app
+# =========================
+# Build stage
+# =========================
 FROM node:22-alpine AS build
 WORKDIR /app
 
 COPY package*.json ./
 RUN npm ci
 
-COPY . ./
-RUN npm run build -- --configuration production
+COPY . .
 
-# Serve with nginx
-FROM nginx:alpine
+# Build BOTH browser + server bundles
+RUN npm run build:ssr
 
-# Copy built Angular app
-COPY --from=build /app/dist/what-grows-native-here /usr/share/nginx/html
+# =========================
+# Runtime stage (Node SSR)
+# =========================
+FROM node:22-alpine AS runtime
+WORKDIR /app
 
-# Copy nginx config
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+ENV NODE_ENV=production
+ENV PORT=4000
 
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# Only copy what is needed at runtime
+COPY --from=build /app/dist ./dist
+COPY --from=build /app/package*.json ./
+
+RUN npm ci --omit=dev
+
+EXPOSE 4000
+
+# Angular Universal entry point
+CMD ["node", "dist/what-grows-native-here/server/server.mjs"]
