--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -26,7 +26,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+                "./src/styles.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -43,8 +43,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "5MB",
-                  "maximumError": "10MB"
+                  "maximumWarning": "2MB",
+                  "maximumError": "5MB"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -55,7 +55,7 @@
               "outputHashing": "all"
             },
             "development": {
-              "optimization": false,
+              "optimization": true,
               "extractLicenses": false,
               "sourceMap": true
             }
@@ -92,7 +92,7 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "./src/styles.css"
             ],
             "scripts": []
           }
