fuck this is pain

--- a/FrontEnd/Dockerfile
+++ b/FrontEnd/Dockerfile
@@ -9,11 +9,11 @@ RUN npm ci
 
 COPY . .
 
-# Build BOTH browser + server bundles
+# Build browser + server bundles
 RUN npm run build:ssr
 
 # =========================
-# Runtime stage (Node SSR)
+# Runtime stage
 # =========================
 FROM node:22-alpine AS runtime
 WORKDIR /app
@@ -21,13 +21,16 @@ WORKDIR /app
 ENV NODE_ENV=production
 ENV PORT=4000
 
-# Only copy what is needed at runtime
+# Copy built dist
 COPY --from=build /app/dist ./dist
+# Copy node modules (only prod)
 COPY --from=build /app/package*.json ./
-
 RUN npm ci --omit=dev
+
+# Copy i18n assets into the server folder explicitly
+COPY --from=build /app/src/assets/i18n ./dist/what-grows-native-here/server/assets/i18n
 
 EXPOSE 4000
 
-# Angular Universal entry point
+# Start SSR server
 CMD ["node", "dist/what-grows-native-here/server/server.mjs"]
