--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -19,14 +19,19 @@
             "polyfills": [],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
               },
-              "src/assets"
+{
+                "glob": "**/*.json",
+                "input": "src/assets/il8n",
+                "output": "assets/i18n"
+              }
             ],
             "styles": [
-                "./src/styles.css"
+              "./src/styles.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -89,6 +94,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*.json",
+                "input": "src/assets/il8n",
+                "output": "assets/i18n"
               }
             ],
             "styles": [
