--- a/fly.toml
+++ b/fly.toml
@@ -8,12 +8,16 @@ primary_region = 'iad'
 
 [build]
 
+[deploy]
+  strategy="rolling"
+  max_unavailable=1
+
 [http_service]
   internal_port = 4000
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = 'false'
   auto_start_machines = true
-  min_machines_running = 1
+  min_machines_running = 2
   processes = ['app']
 
 [[vm]]
@@ -21,3 +25,12 @@ primary_region = 'iad'
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
+
+
+[[regions]]
+  name = "iad" # US East (Washington DC)
+  min_machines = 1
+
+[[regions]]
+  name = "lax" # US West (Los Angeles)
+  min_machines = 1
