--- a/supervisord.dev.conf
+++ b/supervisord.dev.conf
@@ -1,14 +1,24 @@
 [supervisord]
 nodaemon=true
 
+# -------------------------
+# Backend (dotnet watch)
+# -------------------------
 [program:backend]
 command=dotnet watch run --urls http://0.0.0.0:8080
 directory=/app/Backend
 autorestart=true
+stdout_logfile=/var/log/supervisor/backend.out.log
+stderr_logfile=/var/log/supervisor/backend.err.log
 environment=ASPNETCORE_ENVIRONMENT=Development
 
+# -------------------------
+# Frontend (npm dev)
+# -------------------------
 [program:frontend]
 command=npm run dev
 directory=/app/FrontEnd
 autorestart=true
+stdout_logfile=/var/log/supervisor/frontend.out.log
+stderr_logfile=/var/log/supervisor/frontend.err.log
 environment=NODE_ENV=development,PORT=4000,API_URL=http://localhost:8080
