--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,7 @@
-FROM mcr.microsoft.com/dotnet/sdk:10.0
+# =========================
+# Base Image
+# =========================
+FROM mcr.microsoft.com/dotnet/sdk:10.0 AS base
 
 # Install Node + Supervisor
 RUN apt-get update && apt-get install -y \
@@ -9,22 +12,32 @@ RUN apt-get update && apt-get install -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
+# Create app directory
 WORKDIR /app
 
-# Frontend deps (cached)
-COPY FrontEnd/package*.json ./FrontEnd/
+# =========================
+# Frontend dependencies
+# =========================
 WORKDIR /app/FrontEnd
+# Copy only package.json / package-lock.json to cache npm install
+COPY FrontEnd/package*.json ./
 RUN npm ci
 
-# Backend deps (cached)
-WORKDIR /app
-COPY Backend/Backend.csproj ./Backend/
-RUN dotnet restore ./Backend/Backend.csproj
+# =========================
+# Backend dependencies
+# =========================
+WORKDIR /app/Backend
+COPY Backend/Backend.csproj ./
+RUN dotnet restore
 
+# =========================
 # Supervisor config
+# =========================
+WORKDIR /app
 COPY supervisord.dev.conf /etc/supervisor/conf.d/supervisord.conf
 
-# Ports
+# Expose ports
 EXPOSE 8080 4000
 
+# Start Supervisor
 CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
