angular.json and fly.toml fixes for faster ttfb and less coldstart issues

--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -18,6 +18,16 @@
             "browser": "src/main.ts",
             "polyfills": [],
             "tsConfig": "tsconfig.app.json",
+            "prerender": true,
+            "namedChunks": false,
+            "optimization": {
+              "scripts": true,
+              "styles": {
+                "minify": true,
+                "inlineCritical": true
+              },
+              "fonts": true
+            },
             "assets": [
               "src/assets",
               {
@@ -52,7 +62,16 @@
                   "maximumError": "4kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "namedChunks": false,
+              "optimization": {
+                "scripts": true,
+                "styles": {
+                  "minify": true,
+                  "inlineCritical": true
+                },
+                "fonts": true
+              }
             },
             "development": {
               "optimization": true,
